--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //menu paciente
+        maven { url "https://jitpack.io" }
     }
 }
 
