--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.integrator.giti.reminders">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,12 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecordatorioActivity"/>
-        <activity android:name=".TratamientoActivity" />
-        <activity android:name=".view.WelcomeActivity" />
-        <activity android:name=".MedicamentoActivity" />
-        <activity
-            android:name=".MenuPacienteActivity"
+        <activity android:name=".view.RegisterActivity"></activity>
+        <activity android:name=".view.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -25,8 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".RecordatorioActivity" />
+        <activity android:name=".TratamientoActivity" />
+        <activity android:name=".view.WelcomeActivity" />
+        <activity android:name=".MedicamentoActivity" />
+        <activity
+            android:name=".MenuPacienteActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        </activity>
+    </application>
 
 </manifest>
